v 1.19
- fix RangeSlider `change`-Event
- add HasSize to FlexibleColumnLayout
- new component: MultiComboBoxGroupItem
- play with `selection-change`-Event of MultiComboBox
- added HasStyle to some Components
and the like