@@ -1,5 +1,11 @@
 /**
+ * 
  * https://sap.github.io/ui5-webcomponents/playground/components/RangeSlider/
+ * 
+ * 
+ * TODO:
+ *   - HasTooltip does not work in Vaadin Application (expectedly according to Vaadin Documentation)
+ *   
  */
 package com.gork.ui5;
 
@@ -15,27 +21,53 @@ import com.vaadin.flow.component.HasSize;
 import com.vaadin.flow.component.Tag;
 import com.vaadin.flow.component.dependency.JsModule;
 import com.vaadin.flow.component.dependency.NpmPackage;
+import com.vaadin.flow.component.shared.HasTooltip;
 import com.vaadin.flow.shared.Registration;
 
 import elemental.json.JsonNumber;
 
 @SuppressWarnings("serial")
 @Tag("ui5-range-slider")
-@NpmPackage(value = "@ui5/webcomponents", version = "^1.14.0")
-@NpmPackage(value = "@ui5/webcomponents-icons", version = "^1.14.0")
+@NpmPackage(value = "@ui5/webcomponents", version = "^1.19.0")
+@NpmPackage(value = "@ui5/webcomponents-icons", version = "^1.19.0")
 @JsModule("@ui5/webcomponents/dist/RangeSlider.js")
 @JsModule("@ui5/webcomponents-icons/dist/direction-arrows.js")
 //public class Ui5RangeSlider extends CustomField implements HasLabel, HasValue.ValueChangeListener, HasSize {
-public class Ui5RangeSlider extends Component implements HasSize {
+public class Ui5RangeSlider extends Component implements HasSize, HasTooltip {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(Ui5RangeSlider.class);
 
 	public Ui5RangeSlider() {
 		LOGGER.info("constructor ...");
-		setShowTooltip(true);
+		setShowTooltip(false); // tooltip in combination with tickmarks does not make sense
 		setShowTickmarks(true);
 		setLabelInterval(1);
+		setMinWidth("12em");
+		setWidth("18em");
+
 		//setStep(1); // 1 is the default
+	}
+
+	public void setLabelInterval(int value) {
+		this.getElement().setProperty("labelInterval", value);
+	}
+
+	// Convenience method
+	public void setMin(int value) {
+		setMin(Float.valueOf(value));
+	}
+
+	public void setMin(Float value) {
+		this.getElement().setProperty("min", value);
+	}
+
+	// Convenience method
+	public void setMax(int value) {
+		setMax(Float.valueOf(value));
+	}
+
+	public void setMax(Float value) {
+		this.getElement().setProperty("max", value);
 	}
 
 	public void setShowTooltip(Boolean value) {
@@ -46,35 +78,9 @@ public class Ui5RangeSlider extends Component implements HasSize {
 		this.getElement().setProperty("showTickmarks", value);
 	}
 
-	public void setStep(int value) {
-		this.getElement().setProperty("step", value);
-	}
-
-	public void setLabelInterval(int value) {
-		this.getElement().setProperty("labelInterval", value);
-	}
-
-	// Convenience method
-	public void setMin(int value) {
-		setMin(new Float(value));
-	}
-
-	public void setMin(Float value) {
-		this.getElement().setProperty("min", value);
-	}
-
-	// Convenience method
-	public void setMax(int value) {
-		setMax(new Float(value));
-	}
-
-	public void setMax(Float value) {
-		this.getElement().setProperty("max", value);
-	}
-
 	// Convenience method
 	public void setStartValue(int value) {
-		setStartValue(new Float(value));
+		setStartValue(Float.valueOf(value));
 	}
 
 	public void setStartValue(Float value) {
@@ -85,9 +91,13 @@ public class Ui5RangeSlider extends Component implements HasSize {
 		return Float.parseFloat(this.getElement().getProperty("startValue"));
 	}
 
+	public void setStep(int value) {
+		this.getElement().setProperty("step", value);
+	}
+
 	// Convenience method
 	public void setEndValue(int value) {
-		setEndValue(new Float(value));
+		setEndValue(Float.valueOf(value));
 	}
 
 	public void setEndValue(Float value) {
@@ -109,16 +119,14 @@ public class Ui5RangeSlider extends Component implements HasSize {
 		private final JsonNumber endValue;
 
 		public ChangeEvent(Ui5RangeSlider source, boolean fromClient,
-				@EventData("event.startValue") JsonNumber startValue,
-				@EventData("event.endValue") JsonNumber endValue) {
+				@EventData("element.startValue") JsonNumber startValue,
+				@EventData("element.endValue") JsonNumber endValue) {
 			super(source, fromClient);
 			this.startValue = startValue;
 			this.endValue = endValue;
 			if (!fromClient) return;
 			LOGGER.info("ChangeEvent ...");
-			LOGGER.info("ChangeEvent - event:", this);
-			LOGGER.info("ChangeEvent - source:", source);
-			LOGGER.info("Change Event - low=" + startValue + ", high=" + endValue);
+			LOGGER.info("Change Event - low=" + getStartValue() + ", high=" + getEndValue());
 		}
 
 		public Number getStartValue() {
